Fixed paragraph wrapping on FAQ container

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,7 +7,7 @@ $neutral-dark: #a29fb9;
 
 // Breakpoints
 $tablet: 58.125rem;
-$mobile: 30rem;
+$mobile: 34.5rem;
 
 // Button
 $primary-button-active-shadow: inset 0.04rem 0.04rem 0.3rem $dark;
